--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <style>   
 Body {  
   font-family: blue;  
-  background-color: yellow;  
+  background-color: blue;  
 }  
 button {   
        background-color: #4CAF50;   
